@@ -1,5 +1,10 @@
 2009-01-04  Martin Nordholts  <martinn@svn.gnome.org>
 
+	* app/display/gimpdisplayshell.c (gimp_display_shell_shrink_wrap):
+	Rename border_x to border_width and border_y to border_height.
+
+2009-01-04  Martin Nordholts  <martinn@svn.gnome.org>
+
 	Bug 562213 – Align Tool doesn't work properly if it is the active
 	tool at startup
 
